# OpenglDemo

./: .gitignore  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/clark/opengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/clark/opengldemo/: ChangeRender.java  ChapterMain.java  FogRender.java  GLRender.java  MainActivity.java  MaskActivity.java  MaskRender.java  MultiRender.java  MyGlRender.java  OpenGLUtil.java  OpenGlUtils.java  Particle.java  ParticleRender.java  TestImageActivity.java  TraceRender.java  Tunnel3D.java
app/src/main/res/layout/: activity_test_image.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/clark/opengldemo/: ExampleUnitTest.java
gldemo/: build.gradle
gldemo/src/main/: AndroidManifest.xml
gldemo/src/main/cpp/: CMakeLists.txt
gldemo/src/main/java/com/clark/gldemo/: CommonUtils.java  Constant.java  MainActivity.java  MyGLRender.java  MyGLRenderContext.java  MyGLSurfaceView.java  MyNativeRender.java  NativeImage.java  OpenglApp.java  TestActivity.java  TestImageActivity.java
gldemo/src/main/java/com/clark/gldemo/adapter/: MyRecyclerViewAdapter.java
gldemo/src/main/java/com/clark/gldemo/audio/: AudioCollector.java
gldemo/src/main/java/com/clark/gldemo/egl/: EGLActivity.java  NativeEglRender.java
gldemo/src/main/res/layout/: activity_test.xml
gldemo/src/main/res/raw/: texture_map_frag.glsl  texture_map_vert.glsl
gldemo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
